<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_app2"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_req_global_title"
            style="@style/font_form_default"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_app"
            android:imeOptions="actionNext"
            android:id="@+id/titleReqGlobalEditText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_req_global_description"
            style="@style/font_form_default"
            android:layout_gravity="left" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            style="@style/edit_text_multi_line_default"
            android:id="@+id/descriptionReqGlobalET" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_req_global_button"
        style="@style/button_default"
        android:id="@+id/sendReqGlobalButton" />
</LinearLayout>