<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profileHeader"
    android:elevation="6dp">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle_shape"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:id="@+id/imageView3" />

    <labex.feevale.br.looky.view.custom.RoundedImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/default_avatar"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/userProfileImageView"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignTop="@+id/imageView3"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="8dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameProfileText"
            style="@style/font_name_header_inverse"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:text="name_user"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userGraduationProfileText"
            style="@style/font_name_sub_title"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:text="graduation_user"/>

        <RatingBar
            android:id="@+id/ratingScoreUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/star_rating_bar_small"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/mainProfilePanel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    style="@style/font_name_header_inverse"
                    android:id="@+id/distProfileTextView"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dist_label_profile"
                    style="@style/font_name_sub_title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="150"
                    style="@style/font_name_header_inverse"
                    android:id="@+id/helpedProfileTextView"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helped_label_profile"
                    style="@style/font_name_sub_title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    style="@style/font_name_header_inverse"
                    android:id="@+id/reqHelpProfileTextView"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requested_label_profile"
                    style="@style/font_name_sub_title"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/knowledge"
            style="@style/font_name_header_tiny_base_app2"
            android:gravity="start"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        style="@style/font_name_header_inverse_tiny"
        android:textSize="24dp"
        android:id="@+id/scoreProfileText"
        android:layout_alignTop="@+id/userProfileImageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_label_profile"
        android:id="@+id/labelScoreTextView"
        style="@style/font_name_sub_title_small_bold"
        android:layout_below="@+id/scoreProfileText"
        android:layout_alignRight="@+id/scoreProfileText"
        android:layout_alignEnd="@+id/scoreProfileText" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentsImageButton"
        android:background="@null"
        android:src="@drawable/comments"
        android:elevation="6dp"
        android:layout_above="@+id/userProfileImageView"
        android:layout_alignRight="@+id/scoreProfileText"
        android:layout_alignEnd="@+id/scoreProfileText" />
</RelativeLayout>